samples/_failures_safe/1761290159_637102_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea6f6410.c: In function ‘main’:
./samples/SAFE/__tmp_ea6f6410.c:138:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  138 |             int result
      |             ^~~
./samples/SAFE/__tmp_ea6f6410.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea6f6410.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea6f6410.c:138:13: error: expected declaration or statement at end of input
